[package]
name = "librtbit-lsd"
version = "0.1.0"
edition = "2024"
description = "BEP 14 Local Service Discovery for the rtbit BitTorrent client"
license = "MIT"
repository = "http://100.92.54.45:3002/indexarr/librtbit-lsd"

[dependencies]
anyhow = "1"
librqbit-dualstack-sockets = "0.7"
tokio = { version = "1", features = ["time"] }
tokio-util = "0.7"
sha1w = { git = "http://100.92.54.45:3002/indexarr/librtbit-sha1-wrapper.git", tag = "v0.1.0", package = "librtbit-sha1-wrapper" }
librtbit-core = { git = "http://100.92.54.45:3002/indexarr/librtbit-core.git", tag = "v0.1.0" }
rand = "0.9"
futures = "0.3"
bstr = "1"
parking_lot = "0.12"
httparse = "1"
atoi = "2"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false }

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
